// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Branch divergence graph component renders ahead and behind count 1`] = `
<div
  class="!gl-px-3 @md/panel:gl-block divergence-graph gl-hidden"
  title="10 commits behind main, 10 commits ahead"
>
  <graph-bar-stub
    count="10"
    maxcommits="100"
    position="left"
  />
  <div
    class="!gl-float-left !gl-mt-2 graph-separator"
  />
  <graph-bar-stub
    count="10"
    maxcommits="100"
    position="right"
  />
</div>
`;

exports[`Branch divergence graph component renders distance count 1`] = `
<div
  class="!gl-px-3 @md/panel:gl-block divergence-graph gl-hidden"
  title="More than 900 commits different with main"
>
  <graph-bar-stub
    count="900"
    maxcommits="100"
    position="full"
  />
</div>
`;
